--- a/Cooking_recipes.ipynb
+++ b/Cooking_recipes.ipynb
@@ -204,18 +204,18 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
+          "height": 363
         },
-        "outputId": "c5a6b6f1-b5c2-4350-a827-f42e213d06bd"
+        "outputId": "5be0e24f-2640-4a5b-e3b1-300b48f83581"
       },
       "source": [
         "import pandas as pd\n",
         "\n",
         "train = pd.read_json('train.json')\n",
         "\n",
-        "train.head()"
+        "train.head(10)"
       ],
-      "execution_count": 38,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -275,6 +275,36 @@
               "      <td>13162</td>\n",
               "      <td>[black pepper, shallots, cornflour, cayenne pe...</td>\n",
               "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>jamaican</td>\n",
+              "      <td>6602</td>\n",
+              "      <td>[plain flour, sugar, butter, eggs, fresh ginge...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>spanish</td>\n",
+              "      <td>42779</td>\n",
+              "      <td>[olive oil, salt, medium shrimp, pepper, garli...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>italian</td>\n",
+              "      <td>3735</td>\n",
+              "      <td>[sugar, pistachio nuts, white almond bark, flo...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>mexican</td>\n",
+              "      <td>16903</td>\n",
+              "      <td>[olive oil, purple onion, fresh pineapple, por...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>italian</td>\n",
+              "      <td>12734</td>\n",
+              "      <td>[chopped tomatoes, fresh basil, garlic, extra-...</td>\n",
+              "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
@@ -285,13 +315,18 @@
               "1  southern_us  25693  [plain flour, ground pepper, salt, tomatoes, g...\n",
               "2     filipino  20130  [eggs, pepper, salt, mayonaise, cooking oil, g...\n",
               "3       indian  22213                [water, vegetable oil, wheat, salt]\n",
-              "4       indian  13162  [black pepper, shallots, cornflour, cayenne pe..."
+              "4       indian  13162  [black pepper, shallots, cornflour, cayenne pe...\n",
+              "5     jamaican   6602  [plain flour, sugar, butter, eggs, fresh ginge...\n",
+              "6      spanish  42779  [olive oil, salt, medium shrimp, pepper, garli...\n",
+              "7      italian   3735  [sugar, pistachio nuts, white almond bark, flo...\n",
+              "8      mexican  16903  [olive oil, purple onion, fresh pineapple, por...\n",
+              "9      italian  12734  [chopped tomatoes, fresh basil, garlic, extra-..."
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 38
+          "execution_count": 39
         }
       ]
     },
