--- a/Cooking_recipes.ipynb
+++ b/Cooking_recipes.ipynb
@@ -865,6 +865,288 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pXgGNq2uieSg",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 363
+        },
+        "outputId": "6a07906d-783b-4632-c1a2-64623b6dd927"
+      },
+      "source": [
+        "train[train['numberOfIngredients'] == 1].head(10)"
+      ],
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>cuisine</th>\n",
+              "      <th>id</th>\n",
+              "      <th>ingredients</th>\n",
+              "      <th>numberOfIngredients</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>940</th>\n",
+              "      <td>japanese</td>\n",
+              "      <td>4734</td>\n",
+              "      <td>[sushi rice]</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2088</th>\n",
+              "      <td>vietnamese</td>\n",
+              "      <td>7833</td>\n",
+              "      <td>[dried rice noodles]</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6787</th>\n",
+              "      <td>indian</td>\n",
+              "      <td>36818</td>\n",
+              "      <td>[plain low-fat yogurt]</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7011</th>\n",
+              "      <td>indian</td>\n",
+              "      <td>19772</td>\n",
+              "      <td>[unsalted butter]</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8181</th>\n",
+              "      <td>japanese</td>\n",
+              "      <td>16116</td>\n",
+              "      <td>[udon]</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8852</th>\n",
+              "      <td>thai</td>\n",
+              "      <td>29738</td>\n",
+              "      <td>[sticky rice]</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8990</th>\n",
+              "      <td>indian</td>\n",
+              "      <td>41124</td>\n",
+              "      <td>[butter]</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>10506</th>\n",
+              "      <td>mexican</td>\n",
+              "      <td>32631</td>\n",
+              "      <td>[corn tortillas]</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>13178</th>\n",
+              "      <td>thai</td>\n",
+              "      <td>29570</td>\n",
+              "      <td>[grained]</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>17804</th>\n",
+              "      <td>southern_us</td>\n",
+              "      <td>29849</td>\n",
+              "      <td>[lemonade concentrate]</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "           cuisine     id             ingredients  numberOfIngredients\n",
+              "940       japanese   4734            [sushi rice]                    1\n",
+              "2088    vietnamese   7833    [dried rice noodles]                    1\n",
+              "6787        indian  36818  [plain low-fat yogurt]                    1\n",
+              "7011        indian  19772       [unsalted butter]                    1\n",
+              "8181      japanese  16116                  [udon]                    1\n",
+              "8852          thai  29738           [sticky rice]                    1\n",
+              "8990        indian  41124                [butter]                    1\n",
+              "10506      mexican  32631        [corn tortillas]                    1\n",
+              "13178         thai  29570               [grained]                    1\n",
+              "17804  southern_us  29849  [lemonade concentrate]                    1"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 54
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SlpoyBgGjKGx",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 363
+        },
+        "outputId": "164164cc-eca4-409b-8c07-2cfbc40323ec"
+      },
+      "source": [
+        "train[train['numberOfIngredients'] == 4].head(10)"
+      ],
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>cuisine</th>\n",
+              "      <th>id</th>\n",
+              "      <th>ingredients</th>\n",
+              "      <th>numberOfIngredients</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>indian</td>\n",
+              "      <td>22213</td>\n",
+              "      <td>[water, vegetable oil, wheat, salt]</td>\n",
+              "      <td>4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>16</th>\n",
+              "      <td>british</td>\n",
+              "      <td>34466</td>\n",
+              "      <td>[greek yogurt, lemon curd, confectioners sugar...</td>\n",
+              "      <td>4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>17</th>\n",
+              "      <td>italian</td>\n",
+              "      <td>1420</td>\n",
+              "      <td>[italian seasoning, broiler-fryer chicken, may...</td>\n",
+              "      <td>4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>18</th>\n",
+              "      <td>thai</td>\n",
+              "      <td>2941</td>\n",
+              "      <td>[sugar, hot chili, asian fish sauce, lime juice]</td>\n",
+              "      <td>4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>29</th>\n",
+              "      <td>mexican</td>\n",
+              "      <td>1299</td>\n",
+              "      <td>[flour tortillas, cheese, breakfast sausages, ...</td>\n",
+              "      <td>4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>54</th>\n",
+              "      <td>italian</td>\n",
+              "      <td>31119</td>\n",
+              "      <td>[lemon, pesto, salmon fillets, white wine]</td>\n",
+              "      <td>4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>58</th>\n",
+              "      <td>italian</td>\n",
+              "      <td>2646</td>\n",
+              "      <td>[pizza crust, plum tomatoes, pesto, part-skim ...</td>\n",
+              "      <td>4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>90</th>\n",
+              "      <td>italian</td>\n",
+              "      <td>31831</td>\n",
+              "      <td>[salt, starchy potatoes, grated nutmeg, flour]</td>\n",
+              "      <td>4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>132</th>\n",
+              "      <td>mexican</td>\n",
+              "      <td>41078</td>\n",
+              "      <td>[refried beans, grated jack cheese, hot sauce,...</td>\n",
+              "      <td>4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>149</th>\n",
+              "      <td>italian</td>\n",
+              "      <td>20919</td>\n",
+              "      <td>[shredded mozzarella cheese, marinara sauce, f...</td>\n",
+              "      <td>4</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "     cuisine  ...  numberOfIngredients\n",
+              "3     indian  ...                    4\n",
+              "16   british  ...                    4\n",
+              "17   italian  ...                    4\n",
+              "18      thai  ...                    4\n",
+              "29   mexican  ...                    4\n",
+              "54   italian  ...                    4\n",
+              "58   italian  ...                    4\n",
+              "90   italian  ...                    4\n",
+              "132  mexican  ...                    4\n",
+              "149  italian  ...                    4\n",
+              "\n",
+              "[10 rows x 4 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 55
+        }
+      ]
     }
   ]
 }
