--- a/Cooking_recipes.ipynb
+++ b/Cooking_recipes.ipynb
@@ -45,7 +45,7 @@
       "metadata": {
         "id": "MhQ1joZvWuKA",
         "colab_type": "code",
-        "outputId": "f3e50505-13d6-470c-ac86-3f5fb99e26a8",
+        "outputId": "6f820db3-676a-4ab4-e3a7-c0edf0fe8d7b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 219
@@ -54,18 +54,18 @@
       "source": [
         "!pip install kaggle"
       ],
-      "execution_count": 11,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Requirement already satisfied: kaggle in /usr/local/lib/python3.6/dist-packages (1.5.3)\n",
-            "Requirement already satisfied: requests in /usr/local/lib/python3.6/dist-packages (from kaggle) (2.21.0)\n",
             "Requirement already satisfied: python-dateutil in /usr/local/lib/python3.6/dist-packages (from kaggle) (2.5.3)\n",
-            "Requirement already satisfied: tqdm in /usr/local/lib/python3.6/dist-packages (from kaggle) (4.28.1)\n",
-            "Requirement already satisfied: certifi in /usr/local/lib/python3.6/dist-packages (from kaggle) (2019.3.9)\n",
             "Requirement already satisfied: urllib3<1.25,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from kaggle) (1.24.3)\n",
+            "Requirement already satisfied: certifi in /usr/local/lib/python3.6/dist-packages (from kaggle) (2019.3.9)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.6/dist-packages (from kaggle) (2.21.0)\n",
             "Requirement already satisfied: python-slugify in /usr/local/lib/python3.6/dist-packages (from kaggle) (3.0.2)\n",
+            "Requirement already satisfied: tqdm in /usr/local/lib/python3.6/dist-packages (from kaggle) (4.28.1)\n",
             "Requirement already satisfied: six>=1.10 in /usr/local/lib/python3.6/dist-packages (from kaggle) (1.12.0)\n",
             "Requirement already satisfied: idna<2.9,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests->kaggle) (2.8)\n",
             "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests->kaggle) (3.0.4)\n",
@@ -84,7 +84,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 54
         },
-        "outputId": "76334a45-c862-4e93-d854-cdd89a2ae4bf"
+        "outputId": "023a310f-01bf-4448-9a92-2988caca4fac"
       },
       "source": [
         "import os\n",
@@ -99,7 +99,7 @@
         "except:\n",
         "  print(\"File already exists\")\n"
       ],
-      "execution_count": 12,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -121,7 +121,7 @@
       "source": [
         "import json\n",
         "\n",
-        "token = {\"username\":\"krogul\",\"key\":\"4af3977f04d4e785d10b72533d11648c\"}\n",
+        "token = {\"username\":\"x\",\"key\":\"x\"}\n",
         "\n",
         "with open('/content/.kaggle/kaggle.json', 'w') as file:\n",
         "    json.dump(token, file)"
@@ -138,7 +138,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 54
         },
-        "outputId": "e8de5f76-f45c-451c-eb46-bd1bc32c16c0"
+        "outputId": "f1cc5948-03df-443d-d583-04446e824b7b"
       },
       "source": [
         "try:\n",
@@ -151,7 +151,7 @@
         "except:\n",
         "  print(\"File already exists\")\n"
       ],
-      "execution_count": 21,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -181,7 +181,7 @@
       "metadata": {
         "id": "1mXxfd2QXO2B",
         "colab_type": "code",
-        "outputId": "aa109a7f-aa12-4649-855c-36d654e883f9",
+        "outputId": "1931341b-e991-4148-a2a8-bfb301c83950",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -190,7 +190,7 @@
       "source": [
         "!kaggle config set -n path -v{/content}"
       ],
-      "execution_count": 23,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -219,7 +219,7 @@
       "metadata": {
         "id": "Pn5WeQTjXYHB",
         "colab_type": "code",
-        "outputId": "b6e71cc3-fe1d-42b6-ca96-7b5a7f2fdfc1",
+        "outputId": "24e44dec-e42a-4954-a12b-c0d55f654e51",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 182
@@ -228,20 +228,20 @@
       "source": [
         "!kaggle competitions download -c whats-cooking-kernels-only -p /content"
       ],
-      "execution_count": 25,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Downloading sample_submission.csv.zip to /content\n",
             "\r  0% 0.00/25.8k [00:00<?, ?B/s]\n",
-            "100% 25.8k/25.8k [00:00<00:00, 21.0MB/s]\n",
+            "100% 25.8k/25.8k [00:00<00:00, 45.1MB/s]\n",
             "Downloading test.json.zip to /content\n",
             "  0% 0.00/437k [00:00<?, ?B/s]\n",
-            "100% 437k/437k [00:00<00:00, 60.0MB/s]\n",
+            "100% 437k/437k [00:00<00:00, 59.9MB/s]\n",
             "Downloading train.json.zip to /content\n",
             "  0% 0.00/1.80M [00:00<?, ?B/s]\n",
-            "100% 1.80M/1.80M [00:00<00:00, 59.2MB/s]\n"
+            "100% 1.80M/1.80M [00:00<00:00, 121MB/s]\n"
           ],
           "name": "stdout"
         }
@@ -252,7 +252,7 @@
       "metadata": {
         "id": "CXtQRl52Xugi",
         "colab_type": "code",
-        "outputId": "a5831a5d-e470-40d3-a2f8-0b0ef4509b25",
+        "outputId": "3c8960f4-c448-4650-d040-527932b89469",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 201
@@ -261,7 +261,7 @@
       "source": [
         "!unzip \\*.zip"
       ],
-      "execution_count": 26,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -286,7 +286,7 @@
       "metadata": {
         "id": "8OC7f5ICaX_B",
         "colab_type": "code",
-        "outputId": "80d7f50b-9786-4e6d-9e89-e7189aa005e5",
+        "outputId": "00cdcd8b-5853-44e0-8dad-0d919928f921",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 363
@@ -302,7 +302,7 @@
         "train.head(10)\n",
         "\n"
       ],
-      "execution_count": 31,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -413,7 +413,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 31
+          "execution_count": 22
         }
       ]
     },
@@ -422,118 +422,13 @@
       "metadata": {
         "id": "R-t0xj2gOn5g",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 363
-        },
-        "outputId": "9a7176e3-c98b-4992-be62-a1a92f183570"
+        "colab": {}
       },
       "source": [
         ""
       ],
-      "execution_count": 32,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>id</th>\n",
-              "      <th>ingredients</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>18009</td>\n",
-              "      <td>[baking powder, eggs, all-purpose flour, raisi...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>28583</td>\n",
-              "      <td>[sugar, egg yolks, corn starch, cream of tarta...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>41580</td>\n",
-              "      <td>[sausage links, fennel bulb, fronds, olive oil...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>29752</td>\n",
-              "      <td>[meat cuts, file powder, smoked sausage, okra,...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>35687</td>\n",
-              "      <td>[ground black pepper, salt, sausage casings, l...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>5</th>\n",
-              "      <td>38527</td>\n",
-              "      <td>[baking powder, all-purpose flour, peach slice...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>6</th>\n",
-              "      <td>19666</td>\n",
-              "      <td>[grape juice, orange, white zinfandel]</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>7</th>\n",
-              "      <td>41217</td>\n",
-              "      <td>[ground ginger, white pepper, green onions, or...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>8</th>\n",
-              "      <td>28753</td>\n",
-              "      <td>[diced onions, taco seasoning mix, all-purpose...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>9</th>\n",
-              "      <td>22659</td>\n",
-              "      <td>[eggs, cherries, dates, dark muscovado sugar, ...</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "      id                                        ingredients\n",
-              "0  18009  [baking powder, eggs, all-purpose flour, raisi...\n",
-              "1  28583  [sugar, egg yolks, corn starch, cream of tarta...\n",
-              "2  41580  [sausage links, fennel bulb, fronds, olive oil...\n",
-              "3  29752  [meat cuts, file powder, smoked sausage, okra,...\n",
-              "4  35687  [ground black pepper, salt, sausage casings, l...\n",
-              "5  38527  [baking powder, all-purpose flour, peach slice...\n",
-              "6  19666             [grape juice, orange, white zinfandel]\n",
-              "7  41217  [ground ginger, white pepper, green onions, or...\n",
-              "8  28753  [diced onions, taco seasoning mix, all-purpose...\n",
-              "9  22659  [eggs, cherries, dates, dark muscovado sugar, ..."
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 32
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -544,7 +439,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 363
         },
-        "outputId": "e8ee857f-6dee-410c-cc2d-c0837f3a120f"
+        "outputId": "7d4fc7ba-71ee-495c-db45-04ac04ac1bfa"
       },
       "source": [
         "train['numberOfIngredients'] = train['ingredients'].apply(lambda x: len(x))\n",
@@ -552,7 +447,7 @@
         "train.head(10)\n",
         "test.head(10)"
       ],
-      "execution_count": 36,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -665,7 +560,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 36
+          "execution_count": 23
         }
       ]
     },
@@ -678,12 +573,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 300
         },
-        "outputId": "a7af7769-7e95-43f5-e68c-0b5aaf9c2760"
+        "outputId": "3d149f55-9cb9-44f9-c170-73aca76803c2"
       },
       "source": [
         "train.describe()"
       ],
-      "execution_count": 42,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -771,7 +666,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 42
+          "execution_count": 24
         }
       ]
     },
@@ -784,12 +679,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 72
         },
-        "outputId": "cee0023f-2cba-4324-a486-cc301163840c"
+        "outputId": "3a11b11e-6319-442e-cbb1-507864fe6cb4"
       },
       "source": [
         "print(train['cuisine'].unique())"
       ],
-      "execution_count": 37,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -809,15 +704,27 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 283
+          "height": 301
         },
-        "outputId": "c1dccb41-05d2-4054-d9d4-192214becaca"
+        "outputId": "80388954-5b89-4b86-e97c-401881a9169c"
       },
       "source": [
         "sns.countplot(y=\"cuisine\", data=train, order = train['cuisine'].value_counts().index)"
       ],
-      "execution_count": 41,
+      "execution_count": 26,
       "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f9e765b3470>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 26
+        },
         {
           "output_type": "display_data",
           "data": {
@@ -841,7 +748,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 297
         },
-        "outputId": "caebcf73-9d32-4179-ef97-dba42fd4105e"
+        "outputId": "5291558f-3706-4f49-c436-de4dbe4711dc"
       },
       "source": [
         "plt.figure(figsize=(10,4))\n",
@@ -850,7 +757,7 @@
         "plt.tight_layout()\n",
         "plt.show()"
       ],
-      "execution_count": 52,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "display_data",
@@ -875,12 +782,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 363
         },
-        "outputId": "6a07906d-783b-4632-c1a2-64623b6dd927"
+        "outputId": "cbebbf31-01b9-46eb-e65f-3ed892c23552"
       },
       "source": [
         "train[train['numberOfIngredients'] == 1].head(10)"
       ],
-      "execution_count": 54,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1002,7 +909,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 54
+          "execution_count": 28
         }
       ]
     },
@@ -1015,12 +922,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 363
         },
-        "outputId": "164164cc-eca4-409b-8c07-2cfbc40323ec"
+        "outputId": "be227ba3-b469-4ab5-d19b-d729bf76a553"
       },
       "source": [
         "train[train['numberOfIngredients'] == 4].head(10)"
       ],
-      "execution_count": 55,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1144,7 +1051,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 55
+          "execution_count": 29
         }
       ]
     }
